--- a/miniprojekt.Rmd
+++ b/miniprojekt.Rmd
@@ -17,12 +17,27 @@ When you click the **Knit** button a document will be generated that includes bo
 summary(cars)
 ```
 
-## Including Plots
 
-You can also embed plots, for example:
+```{r}
+2+2
 
-```{r pressure, echo=FALSE}
-plot(pressure)
+
+
+4+4
 ```
 
-Note that the `echo = FALSE` parameter was added to the code chunk to prevent printing of the R code that generated the plot.
+
+
+
+```{r}
+adsasdsa
+dsa
+dsa
+dsa
+das
+d
+adsad
+
+```
+
+
