--- a/miniprojekt.Rmd
+++ b/miniprojekt.Rmd
@@ -69,19 +69,16 @@ cat(abc)
 1
 ```
 
-<<<<<<< HEAD
 ```{r}
 uselesskid
 ```
-=======
 
 ```{r}
 #crack your own spine
 ```
 
 
+i er nogle perkere
 
 
-
->>>>>>> c988f5af96652283fc991cbdaa8e912fe4c42b88
 
