--- a/SM.Rmd
+++ b/SM.Rmd
@@ -26,3 +26,8 @@ plot(pressure)
 ```
 
 Note that the `echo = FALSE` parameter was added to the code chunk to prevent printing of the R code that generated the plot.
+
+```{r}
+Suck a big black nigga dick
+```
+
