--- a/Rasmus.Rmd
+++ b/Rasmus.Rmd
@@ -19,6 +19,8 @@ Gradienten er
 $\begin{bmatrix} \frac{1}{n} \sum_i^n 2(a + bs_i - d_i) \\ \frac{1}{n} \sum_i^n 2(a + bs_i -d_i)s_i \end{bmatrix}$
 
 
+
+
 ```{r Opg. 1}
 ab <- c(1,1)
 n <- 50
@@ -52,94 +54,59 @@ backtrack <- function(a_bar = 3, rho = 0.3, c = 0.2, func = f, Dfunc = d_f, x_k 
   a
 }
 
+#steepest descent
 optimer_identitet <- function(x_0 = ab) {
   x_k <- x_0
   a_k <- 2
   itt <- 0
+  steps <- c()
   while (norm(t(d_f(x_k))) > 1e-5) {
     itt <- 1 + itt
     p_k <- -d_f(x_k)
     a_k <- backtrack(a_k, rho = 0.5, c = 0.001, f, d_f, x_k)
     x_k <- x_k + a_k * t(p_k)
+    steps[itt] <- a_k
     if (itt == 100000) {
       break
     }
   }
-  cat("x* = ", x_k, "f(x*) =", f(x_k), "iteration =", itt)
+  cat("x* = ", x_k, "f(x*) =", f(x_k), "iteration =", itt, "steps = ", steps[1:5])
 }
 optimer_identitet()
 
+
+#newton
 optimer_newton <- function(x_0 = ab) {
   x_k <- x_0
   a_k <- 2
   itt <- 0
+  steps <- c()
+  x_plot <- c()
+  f_plot <- c()
   while (norm(t(d_f(x_k))) > 1e-5) {
     itt <- 1 + itt
     p_k <- solve(dd_f(x_k), -d_f(x_k))
-    a_k <- backtrack(a_k, rho = 0.5, c = 0.001, f, d_f, x_k)
+    a_k <- backtrack(a_k, rho = 0.5, c = 0.01, f, d_f, x_k)
     x_k <- x_k + a_k * t(p_k)
+    abline(x_k)
+    steps[itt] <- a_k
     if (itt == 100000) {
       break
     }
   }
-  cat("x* = ", x_k, "f(x*) =", f(x_k), "iteration =", itt)
+  cat("x* = ", x_k, "f(x*) =", f(x_k), "iteration =", itt, "steps = ", steps[1:5])
 }
 optimer_newton()
 
+
 optim(ab, f, hessian = TRUE)
 
-```
+plot(dist ~ speed, cars)
+abline(-17.57909, 3.932409)
 
 
-```{r gammel inspo}
-
-
-y <- c(1.5,0.5)
-
-funk <- function(x) {
-  x1 <- x[1]
-  x2 <- x[2]
-  (1- x1)^2 + 100 * (x2 - x1^2)^2
-}
-
-dfunk <- function(x) {
-  grad(funk,x)
-}
-
-ddfunk <- function(x) {
-  hessian(funk,x)
-}
-
-backtrack <- function(a_bar = 3, rho = 0.3, c = 0.2, func = funk, Dfunc = dfunk, x_k = y) {
-  a <- a_bar
-  itt <- 0
-  while ( (func(x_k + a * (-Dfunc(x_k)) ) ) > (func(x_k) + c * a * t(Dfunc(x_k)) %*% (-Dfunc(x_k))) ) {
-    itt <- itt + 1
-    a <- rho * a
-  }
-  a
-}
-backtrack()
-
-
-
-optimer <- function(x_0 = y) {
-  x_k <- x_0
-  a_k <- 2
-  itt <- 0
-  while (norm(t(dfunk(x_k))) > 1e-5) {
-    itt <- 1 + itt
-    p_k <- solve(ddfunk(x_k), -dfunk(x_k))
-    a_k <- backtrack(a_k, rho = 0.3, c = 0.2, funk, dfunk, x_k)
-    x_k <- x_k + a_k * t(p_k)
-    if (itt == 10000000) {
-      break
-    }
-  }
-  cat("x* = ", x_k, "f(x*) =", funk(x_k), "iteration =", itt)
-}
-optimer()
 
 
 ```
+
 
