--- a/BJ.Rmd
+++ b/BJ.Rmd
@@ -75,6 +75,7 @@ while (norm(t(grad.ab(ab))) > 0.001){
   p_k <- -grad.ab(ab)
   ab <- ab + alpha*p_k
 }
+ab
 ```
 Forløblig implemtering, dobbelttjekkes med optim-funktionen i R
 ```{r}
@@ -90,7 +91,59 @@ Dette forsøger jeg at forbedre:
 Det er den rette linje, som minimerer residualerne mest.
 
     * Discuss different ways to determine the step sizes.
-Første metode at bestemme 
+Første metode at bestemme skridtlængden med, er global minimizer. Her skal funktionen $\phi(\alpha)=f(x_k + \alpha p_k)$ optimeres. Dette kan gøres ved at aflede mht. $\alpha$.
+Først skrives funktionen $f$, så det er nemmere at overskue, hvorefter det kan afledes.
+$$\frac{1}{n}\sum^n_{i=1}f_i(a-\alpha \nabla_a f, b-\alpha \nabla_b f)^2$$
+Den afledte udregnes, og funktionen sættes lig $0$, dette giver den optimale værdi for alpha, hvor 
+$$\alpha_i=\frac{bs_i+a-d_i}{\nabla_bf \times s_i + \nabla_a f}$$
+disse værdier skal altså summes, hvilket giver den optimale værdi for det en givet $(a,b)$ værdi. Der defineres en funktion som kan udregne alpha
+
+%$$\frac{\partial}{\partial \alpha}\phi(\alpha)=$$
+
+
+Anden metode er ved hjælp af backtracking, eller sufficient decrease condition, her benyttes formlen:
+$$f(x_k+\alpha p_k) \leq f(x_k) + c_1 \alpha_k \nabla f_k^T p_k$$
+overstående implementers
+```{r}
+p_k <- -grad.ab(ab)
+Bck.trk <- function(fun,ab,alpha.bar,c_1,rho){
+  alpha <- alpha.bar
+  while (abs(fun(ab + alpha*-grad.ab(ab)))>fun(ab)+c_1*alpha*t(grad.ab(ab))%*%-grad.ab(ab)) {
+    alpha <- rho*alpha
+  }
+  alpha
+}
+Bck.trk(f,c(1,1),5,0.01,0.5)
+```
+Med funktionen Bck.trk er det nu muligt at bestemme, for hvilket $\alpha$ funktionen giver en mindre værdi. Det udregnede $\alpha$ er relativt småt, hvilket virker plausibelt, da det før var tilfældet at der kun blev fundet et minimum for små alpha. Backtracking implementeres nu i den originale implementering af gradient decent.
+```{r}
+ab_0 <- c(1,1)
+alpha <- 1
+ab <- ab_0
+itt.m.bk <- 0
+while (norm(t(grad.ab(ab))) > 0.001){
+  itt.m.bk <- itt.m.bk + 1
+  alpha <- Bck.trk(f,ab,alpha,0.001,0.5)
+  p_k <- -grad.ab(ab)
+  ab <- ab + alpha*p_k
+}
+ab
+```
+For at opfylde begge wolfe conditions skal sufficient decrease condition (SDC) benyttes, sammen med curvature condition (CC), hvor følgende ulighed skal være overholdt:
+$$-p_k^t\grad f(x_k + \alpha p_k) \leq -c_2 p_k^t \grad f_k,$$
+hvor $0<c_1<c_2<1$. Dette implementeres også som en funktion;
+```{r}
+wolf.cc <- function(fun, ab, alpha.bar_2, c_2,rho){
+  while (t(-grad.ab(ab))%*%grad.ab(ab+alpha*-grad.ab(ab)) > -c_2*t(-grad.ab(ab))%*%grad.ab(ab)) 
+    {
+    alpha <- rho*alpha
+  }
+  alpha
+}
+wolf.cc(f,c(1,1),1,0.5,0.5)
+```
+
+
 
 3. Try with different ways to choose step sizes and illustrate it (including plotting the objective function and the iterates, $\{x_k\}_k$). 
     * (Technically, it may be easier to have an algorithm for each way of choosing step size.)
